--- a/style.css
+++ b/style.css
@@ -86,3 +86,9 @@ header {
   display: inline;
   margin-right: 20px;
 }
+
+.button-box ul li i {
+  color: #065535;
+  font-size: 24px;
+  cursor: pointer;
+}
